# projetMobile

./: settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/superpixelapp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  image_ppm.h  superpixelapp.cpp
app/src/main/java/com/example/superpixelapp/: MainActivity.java
app/src/main/java/com/example/superpixelapp/Compression/: PaletteActivity.java  VisuCompressionFragment.java
app/src/main/java/com/example/superpixelapp/DataBase/: BitmapConverter.java  DataBase.java  SuperPixelImage.java  SuperPixelImageDao.java
app/src/main/java/com/example/superpixelapp/MainFragment/: CompressionFragment.java  CreationFragment.java  DecompressionFragment.java  ListFragment.java  (+1 more)
app/src/main/res/color/: nav_item_color.xml  nav_item_text_color.xml
app/src/main/res/drawable/: rounded_button.xml  rounded_card.xml  rounded_image_bg.xml
app/src/main/res/layout/: activity_comparaison.xml  activity_visu.xml  dialogue_sauvegarde_image.xml  fragment_compression.xml  fragment_creation.xml  fragment_decompression.xml  fragment_list.xml  item_super_pixel_image.xml  main_view.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/superpixelapp/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+9 files in other folders)
